# eighty20-technical-challenge

./: README.md
backend/: Eighty20.postman_collection.json  README.md  dev.sh  pyproject.toml  tox.ini
backend/api/v1/auth/is_authenticated/: views.py
backend/api/v1/auth/login/: serializer.py  views.py
backend/api/v1/auth/logout/: views.py
backend/app/: settings.py  urls.py
backend/app/api/: views.py
backend/app/api/v1/auth/login/: views.py
backend/user/: admin.py  models.py
backend/user/migrations/: 0001_initial.py
frontend/: README.md  dev.sh  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  main.css  main.jsx  router.jsx
frontend/src/pages/: Index.jsx
frontend/src/pages/Login/: Index.jsx  vm.js  vm.spec.js
frontend/src/services/AuthService/: index.js  index.spec.js
frontend/src/services/HTTPservice/: index.js
